Committing patch for AXIS2C-1597.